# nucleos

./: Cargo.toml  README.md  config.lua
.github/workflows/: run_checks.yml
config/example/: nucleos.lua
lua/nucleos/: compiler.lua  logging.lua  merging.lua  opts.lua  utils.lua
lua/nucleos/tests/: all_tests.lua  runner.lua  test_compiler.lua  test_config.lua  test_opts.lua  test_runner.lua  utils.lua
src/: lib.rs  lua.rs  main.rs  module.rs  task.rs
tests/: lua_tests.rs
